removed external font assets, fixed p tag wrapping across devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,10 +2,7 @@
 IMPORTS
 ===============================*/
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,100);
-@font-face {
-    font-family: Tungsten-Semibold;
-    src: url(/assets/fonts/Tungsten-Semibold.woff);
-}
+
 
 /* ==============================
 GLOBAL STYLES
@@ -66,12 +63,6 @@ flex-direction: column;
 	display: none;
 }
 
-#comingsoon {
-	font-family: 'Tungsten-Semibold', serif;
-	font-size: 3em;
-	margin-top: 0px;
-	display: none;
-}
 
 #slug {
 	margin-bottom: 40px;
@@ -84,7 +75,8 @@ flex-direction: column;
 }
 
 #slug p {
-	margin-top: -15px;
+	margin: -15px auto 0;
+	max-width: 270px;
 }
 
 #signup  {
@@ -218,13 +210,6 @@ flex-direction: column;
 	display: none;
 }
 
-#comingsoon {
-	font-family: 'Tungsten-Semibold', serif;
-	font-size: 3em;
-	margin-top: 0px;
-	display: none;
-}
-
 #slug {
 	margin-bottom: 40px;
 	font-family: 'Roboto', serif;
@@ -235,11 +220,12 @@ flex-direction: column;
 	padding: 0 5px 0;
 }
 
-#slug p {
-	margin-top: -40px;
-	margin-bottom: 65px;
+#slug p {	
+	margin: -40px auto 65px;
 	font-size: 1.5em;
 	font-style: italic;
+	max-width: 600px;
+	
 }
 
 #signup  {
@@ -376,9 +362,6 @@ opacity: 0.5;
 	display: none;
 }
 
-#comingsoon {
-	display: none;
-}
 
 
 /* ==============================
@@ -395,10 +378,11 @@ h2,p {
 h2 {
 	font-size: 3em;
 }
-p {
+#slug p {
 	margin-top: -40px;
 	font-size: 1.7em;
 	font-style:  italic;
+	max-width: 650px;
 }
 #signup  {
 	margin: 0 auto;
